# model-configs-rs

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
adr/: 0001-source-documents-and-path-identity.md  0002-normalization-profiles-and-provenance.md  0003-data-only-validation-boundary.md  0004-manifest-and-diagnostic-stability.md  README.md
corpus/: AUDIT.md  README.md  audit.json  report-candidates.json  report-repositories.json  unresolved-report-candidates.json
crates/model-configs/: Cargo.toml
crates/model-configs/src/: diagnostic.rs  document.rs  error.rs  json_scan.rs  lib.rs  manifest.rs  normalize.rs  path_serde.rs  repository.rs  selection.rs  validation.rs  views.rs
crates/model-configs/tests/: .snapshots.rs.pending-snap  conformance.rs  debug_redaction.rs  manifest.rs  properties.rs  repository.rs  selection.rs  snapshots.rs  typed_views.rs  validation.rs
crates/model-configs/tests/fixtures/: README.md
crates/model-configs/tests/fixtures/qwen3-tiny/: config.json  generation_config.json
crates/model-configs/tests/fixtures/real-formats/checkpoint/: model.safetensors.index.json
crates/model-configs/tests/fixtures/real-formats/processor/: processor_config.json
crates/model-configs/tests/fixtures/real-formats/quantizer/: quantization_config.json
docs/: README.md  integration.md  usage.md
rfcs/: 0001-model-repository-config-v0.1.md  README.md
tools/: corpus_inventory.py  test_corpus_inventory.py
