[workspace]
members = ["crates/model-configs"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["DinoML contributors"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/dinoml/model-configs-rs"

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
tempfile = "3"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
undocumented_unsafe_blocks = "warn"

