[package]
name = "model-configs"
description = "Lossless Hugging Face model repository configuration parsing and normalization"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["huggingface", "machine-learning", "configuration", "serde"]
categories = ["config", "parser-implementations"]
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

